# hft-crypto-engine

./: .gitignore  CMakeLists.txt
include/: MarketData.hpp  OrderManager.hpp  PairsMeanReversionStrategy.hpp  RiskManager.hpp  RollingStats.hpp  Strategy.hpp
src/: MarketData.cpp  OrderManager.cpp  PairsMeanReversionStrategy.cpp  RiskManager.cpp  RollingStats.cpp  main.cpp
